--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "ping-pong-game"
+        "projectId": "26879c02-27db-45ae-ad5c-da4356716044"
       }
     }
   }
