--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:android": "npx eas-cli build -p android --profile preview"
+    "build:android": "npx eas-cli build -p android --profile preview",
+    "build:android:prod": "npx eas-cli build -p android --profile production"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
