--- a/app.json
+++ b/app.json
@@ -31,6 +31,7 @@
       "eas": {
         "projectId": "26879c02-27db-45ae-ad5c-da4356716044"
       }
-    }
+    },
+    "owner": "youngtoaster"
   }
 }
