--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
-    "eas-cli": "^5.0.0",
+    "eas-cli": "5.7.0",
     "expo": "~49.0.0",
     "expo-dev-client": "~2.4.0",
     "expo-status-bar": "~1.6.0",
